port to JDK8 fixed Calendar