@@ -8,6 +8,7 @@ import javafx.scene.text.Text;
 import java.sql.SQLException;
 
 public class NewGuestView {
+
     @FXML
     private TextField nameTF, phoneTF, emailTF;
     @FXML
@@ -15,11 +16,10 @@ public class NewGuestView {
 
     public void onSaveClicked() throws SQLException, ClassNotFoundException {
         errorMsg.setText("");
-        if (nameTF.getText().isBlank() || phoneTF.getText().isBlank() || emailTF.getText().isBlank()) {
+        if (nameTF.getText().trim().isEmpty() || phoneTF.getText().trim().isEmpty() || emailTF.getText().trim().isEmpty()) {
             errorMsg.setText("Wrong Parameters");
             return;
         }
-
 
         GuestDAO.addGuest(nameTF.getText(), phoneTF.getText(), emailTF.getText());
         errorMsg.setText("New Guest Added!");
